--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "watch": "webpack --config webpack.dev.js --watch"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "uuid": "^3.3.2",
     "webpack": "^4.30.0",
     "webpack-merge": "^4.2.1"
   },
@@ -21,6 +23,7 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "prop-types": "^15.7.2",
     "webpack-cli": "^3.3.2"
   }
 }
