--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "watch": "webpack --config webpack.dev.js --watch"
+    "start:js": "webpack --config webpack.dev.js --watch",
+    "start:server": "python3 -m 'http.server'"
   },
   "dependencies": {
     "classnames": "^2.2.6",
