--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-responsive": "^7.0.0",
     "uuid": "^3.3.2",
     "webpack": "^4.30.0",
     "webpack-merge": "^4.2.1"
